<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=" #D3D3D3"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="177dp"
        android:text="@string/bienvenido_a_abrazaheart"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FF6580"
        android:textSize="60sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/datos_button"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:width="2dp"
        android:backgroundTint="#89CFF0"
        android:text="@string/datos"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/mediciones_button"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:width="2dp"
        android:backgroundTint="#89CFF0"
        android:text="@string/mediciones"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/configuracion_button"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:width="2dp"
        android:backgroundTint="#89CFF0"
        android:text="@string/configuracion"
        android:textColor="#000000"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo" />

</LinearLayout>